[gd_scene load_steps=9 format=3 uid="uid://caaobudb0a2yl"]

[ext_resource type="Script" path="res://resources/scripts/overlay_effect.gd" id="1_1y1oj"]
[ext_resource type="Script" path="res://resources/scripts/dialogue_box.gd" id="1_b0eu1"]
[ext_resource type="Material" uid="uid://b3p41gn5f3cwo" path="res://resources/materials/overlay_material.material" id="1_li3cv"]
[ext_resource type="FontFile" uid="uid://dnqhdn5457o5y" path="res://resources/fonts/playfair_display/playfair_bolditalic.ttf" id="2_wdfvv"]
[ext_resource type="Theme" uid="uid://ctf2sqighxluy" path="res://resources/themes/main_menu.tres" id="3_ukhmw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_viob4"]
bg_color = Color(0, 0, 0, 0.498039)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5

[sub_resource type="LabelSettings" id="LabelSettings_akfd8"]
font = ExtResource("2_wdfvv")
font_size = 50
outline_size = 25
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_3cy1d"]
font_size = 35
outline_size = 25
outline_color = Color(0, 0, 0, 1)

[node name="DialogueBox" type="CanvasLayer"]
script = ExtResource("1_b0eu1")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
ratio = 1.8

[node name="MarginContainer" type="MarginContainer" parent="AspectRatioContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 750
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="AspectRatioContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_viob4")

[node name="VBoxContainer" type="VBoxContainer" parent="AspectRatioContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="TopLayerMargin" type="MarginContainer" parent="AspectRatioContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="AspectRatioContainer/MarginContainer/VBoxContainer/TopLayerMargin"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="AspectRatioContainer/MarginContainer/VBoxContainer/TopLayerMargin/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="NameLabel" type="Label" parent="AspectRatioContainer/MarginContainer/VBoxContainer/TopLayerMargin/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Name"
label_settings = SubResource("LabelSettings_akfd8")

[node name="MarginContainer2" type="MarginContainer" parent="AspectRatioContainer/MarginContainer/VBoxContainer/TopLayerMargin/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 1250
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="AspectRatioContainer/MarginContainer/VBoxContainer/TopLayerMargin/HBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="Skip" type="Button" parent="AspectRatioContainer/MarginContainer/VBoxContainer/TopLayerMargin/HBoxContainer/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="AspectRatioContainer/MarginContainer/VBoxContainer/TopLayerMargin/HBoxContainer/MarginContainer2/HBoxContainer/Skip"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("3_ukhmw")
bbcode_enabled = true
text = "[center][font_size=50][outline_size=25][outline_color=black]Skip"
fit_content = true

[node name="Close" type="Button" parent="AspectRatioContainer/MarginContainer/VBoxContainer/TopLayerMargin/HBoxContainer/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="AspectRatioContainer/MarginContainer/VBoxContainer/TopLayerMargin/HBoxContainer/MarginContainer2/HBoxContainer/Close"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("3_ukhmw")
bbcode_enabled = true
text = "[center][font_size=50][outline_size=25][outline_color=black]Close"
fit_content = true

[node name="BottomLayerMargin" type="MarginContainer" parent="AspectRatioContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = -75
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="DialogueLabel" type="Label" parent="AspectRatioContainer/MarginContainer/VBoxContainer/BottomLayerMargin"]
unique_name_in_owner = true
layout_mode = 2
text = "Test"
label_settings = SubResource("LabelSettings_3cy1d")
visible_characters = 0
visible_ratio = 0.0

[node name="OverlayEffect" type="Panel" parent="AspectRatioContainer/MarginContainer"]
material = ExtResource("1_li3cv")
layout_mode = 2
mouse_filter = 2
script = ExtResource("1_1y1oj")

[connection signal="button_up" from="AspectRatioContainer/MarginContainer/VBoxContainer/TopLayerMargin/HBoxContainer/MarginContainer2/HBoxContainer/Skip" to="." method="_on_skip_button_button_up"]
[connection signal="button_up" from="AspectRatioContainer/MarginContainer/VBoxContainer/TopLayerMargin/HBoxContainer/MarginContainer2/HBoxContainer/Close" to="." method="_on_close_button_up"]
